# AIO-Agent-Sandbox

./: .gitignore  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml  push-to-ghcr.yml  sdk-ci.yml  sdk-publish.yml
examples/: README.md
examples/_template/: README.md
examples/ag2-integration/: README.md  smoke_test.ipynb
examples/langgraph-deepagents-integration/: README.md  sandbox_backend.py
sdk/fern/: .fernignore  fern.config.json  generators.yml  ir.json  openapi.json
sdk/fern/api/: openapi.yml
sdk/go/: README.md
sdk/js/: CHANGELOG.md  package.json  tsconfig.json  vitest.config.ts
sdk/js/src/: Client.ts  base.ts  index.ts  types.ts
sdk/python/: .gitignore  publish.sh  pyproject.toml
sdk/python/agent_sandbox/: __init__.py  client.py
sdk/python/examples/: README.md  basic.py  browser_use_example.py  openai_example.py  output.md  provider_volcengine.py  pyproject.toml  site.md  site_to_markdown.py
sdk/python/examples/browser-use-integration/: pyproject.toml
sdk/python/examples/code-execute/: pyproject.toml
sdk/python/examples/langgraph-deepagents/: .env.example  README.md  main.py  pyproject.toml
sdk/python/examples/openai-integration/: pyproject.toml
sdk/python/examples/oss-upload/: pyproject.toml
sdk/python/examples/site-to-markdown/: pyproject.toml
sdk/python/examples/volcengine-provider/: pyproject.toml
website/: SDK.md  i18n.json  package-lock.json  package.json  rspress.config.ts
website/docs/: README.md
website/public/: index.html
website/theme/: index.tsx
(+124 files in other folders)
