[project]
name = "examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "agent-sandbox",
    "httpx[socks]>=0.28.1",
    "openai>=1.107.1",
    "playwright>=1.48.0",
]

[tool.uv.sources]
agent-sandbox = { workspace = true }
