[project]
name = "basic-file-operations"
version = "0.1.0"
description = "Basic file operations example for agent-sandbox"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-sandbox",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",
    "tos>=2.6.0",
]

[tool.uv.sources]
agent-sandbox = { path = "../../", editable = true }
